samples/_failures_safe/1761533960_778e19_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_812516e8.c: In function ‘main’:
./samples/SAFE/__tmp_812516e8.c:154:9: error: expected declaration or statement at end of input
  154 |         printf("Not a square matrix\n");
      |         ^~~~~~
./samples/SAFE/__tmp_812516e8.c:154:9: error: expected declaration or statement at end of input
